<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:overScrollMode="never"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:overScrollMode="never"
        android:layout_height="wrap_content"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:background="@drawable/frame"
                android:layout_height="500dp"/>

            <TextView
                android:id="@+id/whattoknow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="350dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/montbold"
                android:text="What to know"
                android:textColor="#fff"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/getaloan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="390dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/montbold"
                android:text="about your loan"
                android:textColor="#fff"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/montsemibold"
                android:text="@string/text1"
                android:textColor="#232324"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/flex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text1"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/montbold"
                android:text="Flexible repayments plans"
                android:textColor="#232324"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/flex"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/montsemibold"
                android:text="@string/text2"
                android:textColor="#232324"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/lowrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text2"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/montbold"
                android:text="Low Interest rate"
                android:textColor="#232324"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/text3"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lowrate"
                android:layout_marginTop="20dp"
                android:text="@string/text3"
                android:textSize="15sp"
                android:fontFamily="@font/montsemibold"
                android:textColor="#232324" />

            <TextView
                android:id="@+id/eg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text3"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/montbold"
                android:text="Here is an Example"
                android:textColor="#232324"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/eg"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/montsemibold"
                android:text="@string/text4"
                android:textColor="#232324"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text4"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/montbold"
                android:text="Still Need help?"
                android:textColor="#232324"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/text5"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="wrap_content"
                android:textSize="15sp"
                android:layout_marginBottom="100dp"
                android:fontFamily="@font/montsemibold"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text4"
                android:layout_marginTop="100dp"
                android:text="@string/text5"
                android:textColor="#232324" />





        </RelativeLayout>







    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0.5"
            android:background="#232324"
            android:fontFamily="@font/montbold"
            android:text="Agree and Continue"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </LinearLayout>


</FrameLayout>
